src/main/java/com/example/frota/errors/ResourceNotFoundException.java
package com.example.frota.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String mensagem) {
        super(mensagem);
    }
}

